--- a/app/src/main/res/layout/fragment_workout_detail.xml
+++ b/app/src/main/res/layout/fragment_workout_detail.xml
@@ -19,4 +19,10 @@
         android:text="@string/workout_description"
         android:id="@+id/textDescription"/>
 
+    <FrameLayout
+        android:id="@+id/stopwatch_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+
 </LinearLayout>
